--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Samuel Michael</title>
   <link rel="stylesheet" href="stylesheets/stylesheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
